modal__btn not showing - try fix

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2228,7 +2228,6 @@ textarea::placeholder {
   }
 }
 .portfolio__modal-btn {
-  margin-top: auto;
   margin-bottom: 2.5vh;
 }
 
