--- a/src/stylesheets/layout/_portfolio.scss
+++ b/src/stylesheets/layout/_portfolio.scss
@@ -490,7 +490,7 @@
   }
 
   &__modal-btn {
-    margin-top: auto;
+    // margin-top: auto;
     margin-bottom: 2.5vh;
   }
 }
